# pdfalign

./: LICENSE  README.md  requirements.txt  setup.cfg  setup.py
samples/: tutorial.ipynb
src/pdfalign/: __init__.py  tableify.py
