[metadata]
name = pdfalign
version = 0.0.5
author = yhesse
description = pdfalign is a very simple tool to grid align extracted pdf text. This is useful for invoice table extraction or further processing with llms / rag systems
long_description = file: README.md, LICENSE
long_description_content_type='text/markdown'
url = https://github.com/y-hesse/pdfalign
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    numpy
    pandas
    pymupdf
    pillow
